--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="./assets/phones.png" alt="Два мобильных телефона" class="phones-image">
         </div>
     </div>
-    <img src="./assets/top-wave.svg" alt="Волна" class="wave">
+    <img src="./assets/wave.svg" alt="Волна" class="wave">
     <div class="container partners">
         <div class="blue-header-gradient-background partners__header-gradient">
             <h3 class="partners__header blue-header">
@@ -64,6 +64,97 @@
         <div class="partners__logos">
             <img src="./assets/logo-topgo.svg" alt="Логотип партнёра TopGo" class="partners__logo">
             <img src="./assets/logo-pizza.svg" alt="Логотип партнёра TopPizza" class="partners__logo">
+        </div>
+    </div>
+    <div class="container solutions">
+        <div class="blue-header-gradient-background">
+            <h2 class="blue-header solutions__header">
+                Современные решения
+            </h2>
+        </div>
+        <div class="solutions__grid">
+            <div class="solution-card__wrapper gradient-border-wrapper">
+                <div class="solutions__card solution-card">
+                    <img src="./assets/watch.svg" alt="Изображение наручных часов" class="solution-card__image">
+                    <div class="solution-card__text">
+                        <div class="blue-header-gradient-background">
+                            <h3 class="blue-header solution-card__header">
+                                Доставка
+                            </h3>
+                        </div>
+                        <ul class="solution-card__info solution-card__list">
+                            <li class="solution-card__list-item">Квалифицированные курьеры в спецодежде и с высоким рейтингом</li>
+                            <li class="solution-card__list-item">На автомобиле, пеший, велосипед или самокат</li>
+                            <li class="solution-card__list-item">Наличие термрсумок.</li>
+                            <li class="solution-card__list-item">Доступная цена от 95 р.</li>
+                            <li class="solution-card__list-item">Быстрая доставка в течении 30 минут.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="solution-card__wrapper gradient-border-wrapper">
+                <div class="solutions__card solution-card">
+                    <img src="./assets/money.svg" alt="Рука, держащая символ рубля" class="solution-card__image">
+                    <div class="solution-card__text">
+                        <div class="blue-header-gradient-background">
+                            <h3 class="blue-header solution-card__header">
+                                Экономия
+                            </h3>
+                        </div>
+                        <ul class="solution-card__info solution-card__list">
+                            <li class="solution-card__list-item">Избавим от затрат на содержание собственной службы
+                                доставки с экономией за счет нашего сервиса от 15 000 р. в месяц.</li>
+                            <li class="solution-card__list-item">Расходы на содержание банковских терминалов
+                                (процент по эквайрингу) оставляем за собой. </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="solution-card__wrapper gradient-border-wrapper">
+                <div class="solutions__card solution-card">
+                    <img src="./assets/credit-card.svg" alt="Рука, держащая банковскую карту" class="solution-card__image">
+                    <div class="solution-card__text">
+                        <div class="blue-header-gradient-background">
+                            <h3 class="blue-header solution-card__header">
+                                Экономия
+                            </h3>
+                        </div>
+                        <p class="solution-card__info">
+                            Примем оплату от клиента любым способом: наличные, банковский терминал
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="solution-card__wrapper gradient-border-wrapper">
+                <div class="solutions__card solution-card">
+                    <img src="./assets/laptop.svg" alt="Изображение работы за ноутбуком" class="solution-card__image">
+                    <div class="solution-card__text">
+                        <div class="blue-header-gradient-background">
+                            <h3 class="blue-header solution-card__header">
+                                Контроль
+                            </h3>
+                        </div>
+                        <p class="solution-card__info">
+                            Отслеживайте нахождение курьера на карте в режиме реального времени
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="solution-card__wrapper gradient-border-wrapper">
+                <div class="solutions__card solution-card">
+                    <img src="./assets/guarantee.svg" alt="Изображение гарантийного сертификата" class="solution-card__image">
+                    <div class="solution-card__text">
+                        <div class="blue-header-gradient-background">
+                            <h3 class="blue-header solution-card__header">
+                                Гарантия
+                            </h3>
+                        </div>
+                        <p class="solution-card__info">
+                            Несем полную ответственность за целостность и сохранность вашего заказа
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
