--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="subheader">
         <div class="container subheader__container">
             <div class="request">
-                <h1 class="request__tagline">
+                <h1 class="request__tagline h1">
                     Современные решения для Вашего бизнеса
                 </h1>
                 <a href="#" class="button">Оставить заявку</a>
@@ -56,10 +56,10 @@
     </div>
     <img src="./assets/wave.svg" alt="Волна" class="wave">
     <div class="container partners">
-        <div class="blue-header-gradient-background partners__header-gradient">
-            <h3 class="partners__header blue-header">
+        <div class="blue-text-gradient-background partners__header-gradient">
+            <h5 class="partners__header blue-text h4">
                 Наши партнеры
-            </h3>
+            </h5>
         </div>
         <div class="partners__logos">
             <img src="./assets/logo-topgo.svg" alt="Логотип партнёра TopGo" class="partners__logo">
@@ -67,8 +67,8 @@
         </div>
     </div>
     <div class="container solutions">
-        <div class="blue-header-gradient-background">
-            <h2 class="blue-header solutions__header">
+        <div class="blue-text-gradient-background">
+            <h2 class="blue-text solutions__header h1">
                 Современные решения
             </h2>
         </div>
@@ -77,12 +77,12 @@
                 <div class="solutions__card solution-card">
                     <img src="./assets/watch.svg" alt="Изображение наручных часов" class="solution-card__image">
                     <div class="solution-card__text">
-                        <div class="blue-header-gradient-background">
-                            <h3 class="blue-header solution-card__header">
+                        <div class="blue-text-gradient-background">
+                            <h6 class="blue-text solution-card__header h5">
                                 Доставка
-                            </h3>
+                            </h6>
                         </div>
-                        <ul class="solution-card__info solution-card__list">
+                        <ul class="solution-card__info p solution-card__list">
                             <li class="solution-card__list-item">Квалифицированные курьеры в спецодежде и с высоким рейтингом</li>
                             <li class="solution-card__list-item">На автомобиле, пеший, велосипед или самокат</li>
                             <li class="solution-card__list-item">Наличие термрсумок.</li>
@@ -96,12 +96,12 @@
                 <div class="solutions__card solution-card">
                     <img src="./assets/money.svg" alt="Рука, держащая символ рубля" class="solution-card__image">
                     <div class="solution-card__text">
-                        <div class="blue-header-gradient-background">
-                            <h3 class="blue-header solution-card__header">
+                        <div class="blue-text-gradient-background">
+                            <h6 class="blue-text solution-card__header h5">
                                 Экономия
-                            </h3>
+                            </h6>
                         </div>
-                        <ul class="solution-card__info solution-card__list">
+                        <ul class="solution-card__info p solution-card__list">
                             <li class="solution-card__list-item">Избавим от затрат на содержание собственной службы
                                 доставки с экономией за счет нашего сервиса от 15 000 р. в месяц.</li>
                             <li class="solution-card__list-item">Расходы на содержание банковских терминалов
@@ -114,12 +114,12 @@
                 <div class="solutions__card solution-card">
                     <img src="./assets/credit-card.svg" alt="Рука, держащая банковскую карту" class="solution-card__image">
                     <div class="solution-card__text">
-                        <div class="blue-header-gradient-background">
-                            <h3 class="blue-header solution-card__header">
+                        <div class="blue-text-gradient-background">
+                            <h6 class="blue-text solution-card__header h5">
                                 Экономия
-                            </h3>
+                            </h6>
                         </div>
-                        <p class="solution-card__info">
+                        <p class="solution-card__info p">
                             Примем оплату от клиента любым способом: наличные, банковский терминал
                         </p>
                     </div>
@@ -129,12 +129,12 @@
                 <div class="solutions__card solution-card">
                     <img src="./assets/laptop.svg" alt="Изображение работы за ноутбуком" class="solution-card__image">
                     <div class="solution-card__text">
-                        <div class="blue-header-gradient-background">
-                            <h3 class="blue-header solution-card__header">
+                        <div class="blue-text-gradient-background">
+                            <h6 class="blue-text solution-card__header h5">
                                 Контроль
-                            </h3>
+                            </h6>
                         </div>
-                        <p class="solution-card__info">
+                        <p class="solution-card__info p">
                             Отслеживайте нахождение курьера на карте в режиме реального времени
                         </p>
                     </div>
@@ -144,16 +144,89 @@
                 <div class="solutions__card solution-card">
                     <img src="./assets/guarantee.svg" alt="Изображение гарантийного сертификата" class="solution-card__image">
                     <div class="solution-card__text">
-                        <div class="blue-header-gradient-background">
-                            <h3 class="blue-header solution-card__header">
+                        <div class="blue-text-gradient-background">
+                            <h6 class="blue-text solution-card__header h5">
                                 Гарантия
-                            </h3>
+                            </h6>
                         </div>
-                        <p class="solution-card__info">
+                        <p class="solution-card__info p">
                             Несем полную ответственность за целостность и сохранность вашего заказа
                         </p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="profit">
+        <div class="profit__header-container container">
+            <div class="blue-text-gradient-background">
+                <h2 class="blue-text profit__header h1">Почему с нами выгодно?</h2>
+            </div>
+        </div>
+        <div class="profit__container container">
+            <ul class="profit__list">
+                <li class="profit__list-item profit__list-item_header h5">Меньше стресса</li>
+                <li class="profit__list-item p">Вы избавляете себя от поиска персонала, текучести кадров<br>и всех
+                    расходов, связанных<br>с содержанием службы доставки.</li>
+                <li class="profit__list-item profit__list-item_header h5">Больше выгоды</li>
+                <li class="profit__list-item p">Вы избавляете себя от поиска персонала, текучести кадров<br>и всех
+                    расходов, связанных<br>с содержанием службы доставки.</li>
+                <li class="profit__list-item profit__list-item_header h5">Быстрое передвижение</li>
+                <li class="profit__list-item p">Отказавшись от собственной службы доставки и перейдя в наш сервис, Вы
+                    сэкономите от 15 000 р. в месяц<br>(доказано расчетным путем)</li>
+                <li class="profit__list-item profit__list-item_header h5">Много курьеров</li>
+                <li class="profit__list-item p">Курьеры как пешие,<br>на велосипеде или самокате, так<br>
+                    и на автомобиле.</li>
+            </ul>
+            <div class="gradient-border-wrapper form__wrapper form__wrapper_profit">
+                <form class="profit__form form form_profit" id="client_form">
+                    <div class="blue-text-gradient-background form__header">
+                        <h4 class="form__title blue-text h3">
+                            Оставьте заявку
+                        </h4>
+                        <p class="form__subtext blue-text">
+                            наши специалисты свяжутся с Вами<br>в ближайшее время
+                        </p>
+                    </div>
+                    <fieldset class="form__fieldset">
+                        <div class="gradient-border-wrapper form__input-wrapper">
+                            <label class="form__input-label" for="client-name">Введите свое имя</label>
+                            <input type="text" placeholder="Имя" id="client-name" class="form__input" required>
+                        </div>
+                        <div class="gradient-border-wrapper form__input-wrapper">
+                            <label class="form__input-label" for="client-number">
+                                Введите свой номер телефона без +7/8
+                            </label>
+                            <input
+                                    type="text"
+                                    placeholder="+7 (900) 000-00-00"
+                                    id="client-number"
+                                    class="form__input"
+                                    required>
+                        </div>
+                        <div class="gradient-border-wrapper form__input-wrapper">
+                            <label  class="form__input-label" for="client-mail">Введите свой e-mail</label>
+                            <input
+                                    type="text"
+                                    placeholder="mail@mail.ru"
+                                    id="client-mail"
+                                    class="form__input"
+                                    required>
+                        </div>
+                        <div class="gradient-border-wrapper form__input-wrapper">
+                            <label  class="form__input-label" for="client-message">
+                                Введите свое сообщение
+                            </label>
+                            <input
+                                    type="text"
+                                    placeholder="Сообщение"
+                                    id="client-message"
+                                    class="form__input"
+                                    required>
+                        </div>
+                    </fieldset>
+                    <button type="submit" class="button form__button">Оставить заявку</button>
+                </form>
             </div>
         </div>
     </div>
