how it goes scale

--- a/index.html
+++ b/index.html
@@ -166,16 +166,16 @@
         <div class="profit__container container">
             <ul class="profit__list">
                 <li class="profit__list-item profit__list-item_header h5">Меньше стресса</li>
-                <li class="profit__list-item p">Вы избавляете себя от поиска персонала, текучести кадров<br>и всех
-                    расходов, связанных<br>с содержанием службы доставки.</li>
+                <li class="profit__list-item p">Вы избавляете себя от поиска персонала, текучести кадров и всех
+                    расходов, связанных с содержанием службы доставки.</li>
                 <li class="profit__list-item profit__list-item_header h5">Больше выгоды</li>
-                <li class="profit__list-item p">Вы избавляете себя от поиска персонала, текучести кадров<br>и всех
-                    расходов, связанных<br>с содержанием службы доставки.</li>
+                <li class="profit__list-item p">Вы избавляете себя от поиска персонала, текучести кадров и всех
+                    расходов, связанных с содержанием службы доставки.</li>
                 <li class="profit__list-item profit__list-item_header h5">Быстрое передвижение</li>
                 <li class="profit__list-item p">Отказавшись от собственной службы доставки и перейдя в наш сервис, Вы
-                    сэкономите от 15 000 р. в месяц<br>(доказано расчетным путем)</li>
+                    сэкономите от 15 000 р. в месяц (доказано расчетным путем)</li>
                 <li class="profit__list-item profit__list-item_header h5">Много курьеров</li>
-                <li class="profit__list-item p">Курьеры как пешие,<br>на велосипеде или самокате, так<br>
+                <li class="profit__list-item p">Курьеры как пешие, на велосипеде или самокате, так
                     и на автомобиле.</li>
             </ul>
             <div class="gradient-border-wrapper form__wrapper form__wrapper_profit">
@@ -185,7 +185,7 @@
                             Оставьте заявку
                         </h4>
                         <p class="form__subtext blue-text">
-                            наши специалисты свяжутся с Вами<br>в ближайшее время
+                            наши специалисты свяжутся с Вами в ближайшее время
                         </p>
                     </div>
                     <fieldset class="form__fieldset">
@@ -230,7 +230,106 @@
             </div>
         </div>
     </div>
+    <div class="stages container">
+        <div class="blue-text-gradient-background">
+            <h2 class="blue-text h1">Как это работает?</h2>
+        </div>
+        <div class="stages__grid">
+            <div class="stages__row">
+                <div class="stages__item stage-item">
+                    <img src="./assets/request.svg" alt="Значок руки, печатающей сообщение" class="stage-item__picture">
+                    <div class="stage-item__text">
+                        <div class="blue-text-gradient-background stage-item__title-wrapper">
+                            <h6 class="stage-item__title h5 blue-text">Оставьте заявку</h6>
+                        </div>
+                        <p class="stage-item__description p">
+                            Менеджер нашей компании свяжется с Вами
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="stages__row">
+                <div class="stages__item stage-item">
+                    <img src="./assets/contract.svg" alt="Значок руки, печатающей сообщение" class="stage-item__picture">
+                    <div class="stage-item__text">
+                        <div class="blue-text-gradient-background stage-item__title-wrapper">
+                            <h6 class="stage-item__title h5 blue-text">Договор</h6>
+                        </div>
+                        <p class="stage-item__description p">
+                            Со всеми партнерами мы заключаем договор сотрудничества
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="stages__row">
+                <div class="stages__item stage-item">
+                    <img src="./assets/access.svg" alt="Значок руки, печатающей сообщение" class="stage-item__picture">
+                    <div class="stage-item__text">
+                        <div class="blue-text-gradient-background stage-item__title-wrapper">
+                            <h6 class="stage-item__title h5 blue-text">Доступ</h6>
+                        </div>
+                        <p class="stage-item__description p">
+                            Мы регистрируем Вас в системе и начинаем сотрудничество
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="stages__row">
+                <div class="stages__item stage-item">
+                    <img src="./assets/order.svg" alt="Значок руки, печатающей сообщение" class="stage-item__picture">
+                    <div class="stage-item__text">
+                        <div class="blue-text-gradient-background stage-item__title-wrapper">
+                            <h6 class="stage-item__title h5 blue-text">Заказ</h6>
+                        </div>
+                        <p class="stage-item__description p">
+                            Создавайте заказ в 2 клика и программа автоматически подберет ближайшего к Вам курьера
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="stages__row">
+                <div class="stages__item stage-item">
+                    <img src="./assets/watch.svg" alt="Значок руки, печатающей сообщение" class="stage-item__picture">
+                    <div class="stage-item__text">
+                        <div class="blue-text-gradient-background stage-item__title-wrapper">
+                            <h6 class="stage-item__title h5 blue-text">Доставка</h6>
+                        </div>
+                        <p class="stage-item__description p">
+                            Курьер доставит Ваш заказ со всеми условиями температурного режима в течении 30 минут,
+                            а так же примет оплату от клиента
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="stages__row">
+                <div class="stages__item stage-item">
+                    <img src="./assets/stats.svg" alt="Значок руки, печатающей сообщение" class="stage-item__picture">
+                    <div class="stage-item__text">
+                        <div class="blue-text-gradient-background stage-item__title-wrapper">
+                            <h6 class="stage-item__title h5 blue-text">Расчет</h6>
+                        </div>
+                        <p class="stage-item__description p">
+                            Один раз в неделю мы формируем отчет по количеству совершенных заказов и проводим взаиморасчет
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/scale.svg" alt="Шкала пунктов списка" class="stages__scale">
+        </div>
+    </div>
+    <div class="couriers">
+        <div class="couriers__container container">
+            <div class="couriers__info">
 
+            </div>
+            <div class="couriers__form">
+
+            </div>
+        </div>
+        <div class="couriers__container couriers__container_advantages container">
+
+        </div>
+    </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script src="./main.js"></script>
