--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </div>
     </div>
     <img src="./assets/wave.svg" alt="Волна" class="wave">
+    <img src="./assets/wave_tablet.svg" class="wave wave_tablet" alt="wave">
     <div class="container partners">
         <div class="blue-text-gradient-background partners__header-gradient">
             <h5 class="partners__header blue-text h4">
