mobile adaptive without header

--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
                 <h1 class="request__tagline h1">
                     Современные решения для Вашего бизнеса
                 </h1>
-                <a href="#" class="button">Оставить заявку</a>
+                <a href="#" class="request__button button">Оставить заявку</a>
             </div>
             <img src="./assets/phones.png" alt="Два мобильных телефона" class="phones-image">
         </div>
     </div>
     <img src="./assets/wave.svg" alt="Волна" class="wave">
     <img src="./assets/wave_tablet.svg" class="wave wave_tablet" alt="wave">
+    <img src="./assets/wave_mobile.svg" class="wave wave_mobile" alt="wave">
     <div class="container partners">
         <div class="blue-text-gradient-background partners__header-gradient">
             <h5 class="partners__header blue-text h4">
@@ -76,7 +77,9 @@
         <div class="solutions__grid">
             <div class="solution-card__wrapper gradient-border-wrapper">
                 <div class="solutions__card solution-card">
-                    <img src="./assets/watch.svg" alt="Изображение наручных часов" class="solution-card__image">
+                    <div class="solution-card__image-wrapper">
+                        <img src="./assets/watch.svg" alt="Изображение наручных часов" class="solution-card__image">
+                    </div>
                     <div class="solution-card__text">
                         <div class="blue-text-gradient-background">
                             <h6 class="blue-text solution-card__header h5">
@@ -95,7 +98,9 @@
             </div>
             <div class="solution-card__wrapper gradient-border-wrapper">
                 <div class="solutions__card solution-card">
-                    <img src="./assets/money.svg" alt="Рука, держащая символ рубля" class="solution-card__image">
+                    <div class="solution-card__image-wrapper">
+                        <img src="./assets/money.svg" alt="Рука, держащая символ рубля" class="solution-card__image">
+                    </div>
                     <div class="solution-card__text">
                         <div class="blue-text-gradient-background">
                             <h6 class="blue-text solution-card__header h5">
@@ -113,7 +118,9 @@
             </div>
             <div class="solution-card__wrapper gradient-border-wrapper">
                 <div class="solutions__card solution-card">
-                    <img src="./assets/credit-card.svg" alt="Рука, держащая банковскую карту" class="solution-card__image">
+                    <div class="solution-card__image-wrapper">
+                        <img src="./assets/credit-card.svg" alt="Рука, держащая банковскую карту" class="solution-card__image">
+                    </div>
                     <div class="solution-card__text">
                         <div class="blue-text-gradient-background">
                             <h6 class="blue-text solution-card__header h5">
@@ -128,7 +135,9 @@
             </div>
             <div class="solution-card__wrapper gradient-border-wrapper">
                 <div class="solutions__card solution-card">
-                    <img src="./assets/laptop.svg" alt="Изображение работы за ноутбуком" class="solution-card__image">
+                    <div class="solution-card__image-wrapper">
+                        <img src="./assets/laptop.svg" alt="Изображение работы за ноутбуком" class="solution-card__image">
+                    </div>
                     <div class="solution-card__text">
                         <div class="blue-text-gradient-background">
                             <h6 class="blue-text solution-card__header h5">
@@ -143,7 +152,9 @@
             </div>
             <div class="solution-card__wrapper gradient-border-wrapper">
                 <div class="solutions__card solution-card">
-                    <img src="./assets/guarantee.svg" alt="Изображение гарантийного сертификата" class="solution-card__image">
+                    <div class="solution-card__image-wrapper">
+                        <img src="./assets/guarantee.svg" alt="Изображение гарантийного сертификата" class="solution-card__image">
+                    </div>
                     <div class="solution-card__text">
                         <div class="blue-text-gradient-background">
                             <h6 class="blue-text solution-card__header h5">
